@@ -1,5 +1,7 @@
-/* For devices with narrow screens, phones, tablets, etc. */
+@media handheld, screen and (max-device-width: 480px) {
 
+/* For devices with narrow screens, phones, tablets, etc. */
+	
 #portal-column-one, 
 #portal-column-two,
 #portal-column-content { 
@@ -8,18 +10,51 @@
 	margin-left: -98.875%; 
 }
 
+#portal-logo {
+	display: none;
+}
 #portal-top {
-	font-size: 160%;
-	text-align: center;
+	font-size: 180%;
+}
+#portal-personaltools {
+	margin-bottom: 1em;
+}
+#portal-globalnav li a {
+	min-width: 3em !important;
+	padding:0.5em 1.5em 1em 0.5em;
 }
 #portal-searchbox {
 	float: none !important;
-	text-align: center !important;
+	margin: 1em 0;
+	text-align: center;
+}
+#portal-searchbox input {
+	font-size: 100% !important;
+}
+#content-views a, #content li.formTab a {
+	font-size: 150%;
+	line-height: 2em !important;
+}
+#edit-bar {
+	min-height: 3em;
+}
+#contentActionMenus {
+	width: 100%;
+	line-height: 2em !important;
+}
+#contentActionMenus li a {
+	font-size: 150%;
 }
 input {
-	font-size: 100%;
-}
-#portal-globalnav li a {
-	min-width: 4.9em !important;
+	font-size: 140% !important;
 }
 
+div.overlay {
+	font-size: 120%;
+}
+div.overlay-iframe,
+div.overlay-ajax {
+	top: 6em !important; 
+}
+
+}
