@@ -3,6 +3,9 @@ Changelog
 
 1.0b3 - unreleased
 ------------------
+- Improved mobile styling.
+  [limi]
+
 - Less disruptive styling for inline validation, it no longer shifts the form
   around in a significant way.
   [limi]
